GGG-54 Merging mutation resolvers.